# OccultaShield

./: .env.example  .gitignore  LICENSE.md  README.md  README_EXECUTION_GENERAL.md  TERMS.md  docker-compose-simple.yml  env-example.env  instalation.sh
Occultashield_front/: .gitignore  AUTH_SETUP.md  README.md  TEST_AUTH.md  angular.json  package-lock.json  package.json
Prototype/: .env  docker-compose.yml  main.py  pyproject.toml  surreal_conn.py
Prototype/Verification_module/: __init__.py  graph_db.py  ingest_gdpr.py
Prototype/auth/: __init__.py  auth_middleware.py
Prototype/core/: events.py
Prototype/surrealdb-data/database.db/: 000016.sst  000018.sst  000026.sst  IDENTITY  MANIFEST-000030  OPTIONS-000032
backend/: .dockerignore  Dockerfile  README.md  (+2 more)
backend/app/: .env.example  .gitignore  README_GDPR_SETUP.md  libraries_installed.txt  main.py  pyproject.toml  requirements.txt  setup_gdpr.sh
backend/app/.kaggle/: kaggle.json
backend/app/api/v1/: progress.py  router.py
backend/app/api/v1/endpoints/: video.py
backend/app/auth/: __init__.py  auth_middleware.py  login_register.py
backend/app/config/: config_loader.py  detection.yaml  logging_config.py
backend/app/core/: dependencies.py  events.py  logging_middleware.py
backend/app/db/: init_schemas.py  neo4j_queries.py  schemas.surql  surreal_conn.py
backend/app/models/: video.py
backend/app/modules/detection/: README.md  README_MODELS.md  capture_manager.py  detector.py  gpu_manager.py  models.py  tracker.py
backend/app/modules/edition/: README.md  video_editor.py
backend/app/modules/verification/: README.md  Verification_usage.md  __init__.py  consensus_agent.py  gemma_client.py  graph_client.py  graph_db.py  graph_rag.py  ingest_gdpr.py  parallel_processor.py  sub_agent.py
backend/app/notebooks/: 01_detection_module.ipynb  02_edition_module.ipynb  03_verification_module.ipynb  04_full_pipeline.ipynb  README.md  pyproject.toml
backend/app/scripts/gdpr_ingestion/: README.md  enhanced_ingest_gdpr.py  ingest_gdpr.py  setup_and_run.sh
backend/app/scripts/gdpr_ingestion/json_data/: detection_gdpr_mapping.json  gdpr_articles.json  gdpr_concepts.json
backend/app/services/: gdpr_pipeline_service.py  progress_manager.py  video_processor.py
(+143 files in other folders)
