[project]
name = "OccultaShield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "surrealdb",
    "langchain>=1.0.0",
    "langgraph>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-neo4j",
    "langchain-text-splitters",
    "pypdf",
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "pillow",
    "python-dotenv",
    "sentence-transformers",
]
